// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text allows "dir" to be overridden 1`] = `
<div
  class="css-text-901oao"
  dir="rtl"
/>
`;

exports[`components/Text default 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text nested 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
>
  <span
    class="css-text-901oao css-textHasAncestor-16my406"
    data-testid="child"
  />
</div>
`;

exports[`components/Text prop "accessibilityLabel" value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityLabelledBy" value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityLiveRegion" value is set 1`] = `
<div
  aria-live="polite"
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityRole" value alters HTML element 1`] = `
<article
  class="css-text-901oao"
  dir="auto"
  role="article"
/>
`;

exports[`components/Text prop "accessibilityRole" value is "button" 1`] = `
<div
  class="css-cursor-18t94o4 css-text-901oao"
  dir="auto"
  role="button"
  tabindex="0"
/>
`;

exports[`components/Text prop "accessibilityRole" value is set 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  role="presentation"
/>
`;

exports[`components/Text prop "href" href with accessibilityRole 1`] = `
<a
  class="css-reset-4rbku5 css-text-901oao"
  dir="auto"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`components/Text prop "href" value is set 1`] = `
<a
  class="css-reset-4rbku5 css-text-901oao"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`components/Text prop "hrefAttrs" null values are excluded 1`] = `
<a
  class="css-reset-4rbku5 css-text-901oao"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`components/Text prop "hrefAttrs" requires "href" 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text prop "hrefAttrs" target variant is set 1`] = `
<a
  class="css-reset-4rbku5 css-text-901oao"
  dir="auto"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`components/Text prop "hrefAttrs" value is set 1`] = `
<a
  class="css-reset-4rbku5 css-text-901oao"
  dir="auto"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`components/Text prop "lang" fr 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  lang="fr"
/>
`;

exports[`components/Text prop "lang" undefined 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
/>
`;

exports[`components/Text prop "nativeID" value is set 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  id="nativeID"
/>
`;

exports[`components/Text prop "numberOfLines" value is set 1`] = `
<div
  class="css-text-901oao css-textMultiLine-cens5h"
  dir="auto"
/>
`;

exports[`components/Text prop "numberOfLines" value is set to one 1`] = `
<div
  class="css-text-901oao css-textOneLine-vcwn7f"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" value of false 1`] = `
<div
  class="css-text-901oao r-userSelect-lrvibr"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" value of true 1`] = `
<div
  class="css-text-901oao r-userSelect-1xnzce8"
  dir="auto"
/>
`;

exports[`components/Text prop "style" value is set 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px;"
/>
`;

exports[`components/Text prop "testID" value is set 1`] = `
<div
  class="css-text-901oao"
  data-testid="123"
  dir="auto"
/>
`;
